# space-game

./: .gitignore  .gitmodules  README.md
cocos2dx/: .gitignore  CMakeLists.txt
cocos2dx/Classes/: AppDelegate.cpp  AppDelegate.h  CustomParallaxNode.cpp  CustomParallaxNode.h  GameManager.cpp  GameManager.h  HelloWorldScene.cpp  HelloWorldScene.h  ParallaxNodeExtras.cpp  ParallaxNodeExtras.h  SocketClientProxy.cpp  SocketClientProxy.h
cocos2dx/proj.android/: .gitignore  settings.gradle
cocos2dx/proj.android/app/: AndroidManifest.xml  build.gradle
cocos2dx/proj.android/app/jni/: Android.mk  Application.mk
cocos2dx/proj.android/app/res/values/: strings.xml
cocos2dx/proj.ios_mac/ios/: Info.plist
cocos2dx/proj.ios_mac/mac/: Info.plist
cocos2dx/proj.ios_mac/space-game.xcodeproj/: project.pbxproj
cocos2dx/proj.ios_mac/space-game.xcodeproj/project.xcworkspace/xcuserdata/tavandung12.xcuserdatad/: UserInterfaceState.xcuserstate
cocos2dx/proj.ios_mac/space-game.xcodeproj/project.xcworkspace/xcuserdata/tvd12.xcuserdatad/: UserInterfaceState.xcuserstate
cocos2dx/proj.ios_mac/space-game.xcodeproj/project.xcworkspace/xcuserdata/tvd12.xcuserdatad/xcdebugger/: Expressions.xcexplist
cocos2dx/proj.ios_mac/space-game.xcodeproj/xcuserdata/tavandung12.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cocos2dx/proj.ios_mac/space-game.xcodeproj/xcuserdata/tavandung12.xcuserdatad/xcschemes/: xcschememanagement.plist
cocos2dx/proj.ios_mac/space-game.xcodeproj/xcuserdata/tvd12.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cocos2dx/proj.ios_mac/space-game.xcodeproj/xcuserdata/tvd12.xcuserdatad/xcschemes/: xcschememanagement.plist
cocos2dx/proj.win32/: space-game.sln
server-java/: pom.xml
server-java/src/main/java/com/tvd12/space_game/: SpaceGameStartup.java
server-java/src/main/java/com/tvd12/space_game/config/: MongoConfig.java
server-java/src/main/java/com/tvd12/space_game/controller/: UserLoginController.java  UserRequestController.java
server-java/src/main/java/com/tvd12/space_game/entity/: Credential.java  GameCurrentState.java  GameId.java  GameObjectPosition.java  GamePlayerId.java  GameState.java  LeaderBoard.java  PlayerCurrentGame.java
server-java/src/main/java/com/tvd12/space_game/model/: Position.java
server-java/src/main/java/com/tvd12/space_game/repo/: CredentialRepo.java  GameCurrentStateRepo.java  GameObjectPositionRepo.java  LeaderBoardRepo.java  PlayerCurrentGameRepo.java
server-java/src/main/java/com/tvd12/space_game/request/: FinishGameRequest.java  GetGameIdRequest.java  ReconnectRequest.java  StartGameRequest.java  SyncPositionRequest.java  UpdateScoreRequest.java
server-java/src/main/java/com/tvd12/space_game/response/: ReconnectResponse.java
server-java/src/main/resources/: application.yaml  log4j.properties  script.sh
server-java/src/test/java/com/tvd12/space_game/test/: DoubleTest.java
